--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,9 @@
               "src/styles.css"
             ],
             "scripts": [
-              "./node_modules/jquery/dist/jquery.min.js",  
-              "./node_modules/popper.js/dist/umd/popper.min.js",  
-              "./node_modules/bootstrap/dist/js/bootstrap.min.js" 
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/popper.js/dist/umd/popper.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
           "configurations": {
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "aot-technologies"
+    }
+  },
+  "defaultProject": "aot-technologies",
+  "cli": {
+    "analytics": "1ec795f3-a5d4-4495-a776-997084b33a66"
+  }
 }
